--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Math Expression Evaluator",
+  "name": "Command E(valuate)",
   "version": "1.0",
-  "description": "Evaluates mathematical expressions from selected text. Can either right click and select or use the keyboard shortcut : Command E.",
+  "description": "Evaluates mathematical expressions from selected text using Command E",
   "permissions": ["contextMenus", "scripting", "activeTab"],
   "background": {
     "service_worker": "background.js"
@@ -21,5 +21,10 @@
       },
       "description": "Evaluate selected mathematical expression"
     }
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   }
 }
